--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,4 @@
+# Grant sudo privileges to imuser on all servers
 [servers]
 WEB1 ansible_host=192.168.1.10 ansible_port=22222 ansible_user=imuser
 WEB2 ansible_host=192.168.1.11 ansible_port=22222 ansible_user=imuser
